--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@
     flex-wrap: wrap;
     margin: 11% 0 0 0;
     width: 80%;
-    font-size: 13px;
+    font-size: 12px;
     font-family: Arial, Helvetica, sans-serif;
 }
 .MRF-table button{
@@ -49,6 +49,13 @@
     text-decoration: none;
     color: white;
     font-size: 14px;
+}
+.MRF-table th {
+    border-right: 1px solid lightgrey;
+}
+
+.MRF-table td {
+    border-right: 1px solid lightgrey;
 }
 /* Add PSP */
 .add-psp{
@@ -77,6 +84,15 @@
 }
 .add-btn button{
     margin: 0 10px;
+}
+.comp-add{
+    display: flex;
+    flex-direction: column;
+
+}
+.comp-add select{
+    width: 35%;
+    margin-top: 10px;
 }
 /* Page */
 
